--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,4 +1,4 @@
-name: 'Documentation'
+name: Documentation
 
 on: push
 
@@ -13,7 +13,8 @@ jobs:
         uses: technote-space/toc-generator@v2
         with:
           TARGET_PATHS: README.md
-          TOC_TITLE: ''
           MAX_HEADER_LEVEL: 3
+          COMMIT_MESSAGE: Update table of contents
+          PR_TITLE: Update table of contents (${PR_MERGE_REF})
       ##-- workflow-documentation-readme-steps --##
   ##-- workflow-documentation-jobs --##
